package edu.fiuba.algo3.vista.botones;

import javafx.scene.control.Label;

public class LabelException extends Label {

    public LabelException(String texto) {
        super(texto);
        this.setStyle("-fx-background-color: #F1948A; -fx-text-fill: black; -fx-padding: 10 20; -fx-font-size: 26px;");
    }
}
